--- a/.github/workflows/cowsay_workflow.yaml
+++ b/.github/workflows/cowsay_workflow.yaml
@@ -1,6 +1,6 @@
 name: Generate ASCII Artwork
 
-on: workflow_dispatch
+on: push
 
 jobs:
     ascci_job:
@@ -16,13 +16,13 @@ jobs:
           run: cowsay -f dragon "Run for cover, I feel a sneeze coming on." >> dragon.txt     
         
         - name: Sleep 5 sec
-          run: sleep 10
-          
-        - name: Test file exists
-          run: grep -i dragon dragon.txt
+          run: sleep 5
 
-        - name: Read file
-          run: cat dragon.txt
+        # - name: Test file exists
+        #   run: grep -i dragon dragon.txt
+
+        # - name: Read file
+        #   run: cat dragon.txt
 
         - name: List and Read files
           run: ls -ltra
