--- a/.github/workflows/cowsay_workflow.yaml
+++ b/.github/workflows/cowsay_workflow.yaml
@@ -14,15 +14,20 @@ jobs:
 
         - name: Execute Cowsay CMD
           run: cowsay -f dragon "Run for cover, I am a DRAGON." >> dragon.txt     
-        
+
+        - name: Execute Cowsay CMD
+          run: cowsay -f tiger "Run for cover, I am a TIGER." >> tiger.txt 
+          
         - name: Sleep 5 sec
           run: sleep 5
 
         - name: Test file exists
           run: grep -i dragon dragon.txt
 
-        - name: Read file
-          run: cat dragon.txt
+        - name: Read files
+          run: |
+            cat dragon.txt
+            cat tiger.txt
 
         - name: List and Read files
           run: ls -ltra
