Shell Script Test Workflow

--- a/.github/workflows/cowsay_shell_workflow.yaml
+++ b/.github/workflows/cowsay_shell_workflow.yaml
@@ -12,6 +12,9 @@ jobs:
         - name: List the files
           run: ls -ltra
 
+        - name: Change script permission 
+          run: chmod +x ./cowsay.sh
+          
         - name: Executing Shell Script
           run: ./cowsay.sh
 
