--- a/.github/workflows/cowsay_shell_workflow.yaml
+++ b/.github/workflows/cowsay_shell_workflow.yaml
@@ -12,9 +12,11 @@ jobs:
         - name: List the files
           run: ls -ltra
 
-        - name: Change script permission 
-          run: chmod +x ./cowsay.sh
-          
+        # - name: Change script permission 
+        #   run: chmod +x ./cowsay.sh
+
         - name: Executing Shell Script
-          run: ./cowsay.sh
+          run: |
+            chmod +x ./cowsay.sh
+            ./cowsay.sh
 
