--- a/.github/workflows/multi_jobs.yaml
+++ b/.github/workflows/multi_jobs.yaml
@@ -15,22 +15,23 @@ jobs:
     - name: Execute Cowsay CMD
       run: cowsay -f dragon "Run for cover, I am a DRAGON." >> dragon.txt     
 
-    - name: Sleep 20 sec
-      run: sleep 20
+    - name: Sleep 10 sec
+      run: sleep 10
 
   test_job_1:
     needs: build_job_1
-    runs-on: ubunti-latest
+    runs-on: ubuntu-latest
     steps:
+    - name: Sleep 10 sec
+      run: sleep 10
+  
     - name: Test file exists
       run: grep -i dragon dragon.txt
 
-
   deploy_job_1:
     needs: [test_job_1]
-    runs-on: ubunti-latest
+    runs-on: ubuntu-latest
     steps:
-
     - name: Read files
       run: |
           cat dragon.txt
