--- a/.github/workflows/multi_jobs.yaml
+++ b/.github/workflows/multi_jobs.yaml
@@ -15,16 +15,22 @@ jobs:
     - name: Execute Cowsay CMD
       run: cowsay -f dragon "Run for cover, I am a DRAGON." >> dragon.txt     
 
-    - name: Sleep 10 sec
-      run: sleep 10
-
+    - name: Upload the Artifact
+      uses: actions/upload-artifact@v4
+      with:
+        name: cowsay-artifact
+        path: dragon.txt
+  
   test_job_1:
     needs: build_job_1
     runs-on: ubuntu-latest
     steps:
-    - name: Sleep 10 sec
-      run: sleep 10
-  
+    - name: Download the Artifact
+      uses: actions/download-artifact@v4
+      with:
+        name: cowsay-artifact
+        path: dragon.txt
+
     - name: Test file exists
       run: grep -i dragon dragon.txt
 
@@ -32,6 +38,12 @@ jobs:
     needs: [test_job_1]
     runs-on: ubuntu-latest
     steps:
+    - name: Download the Artifact
+      uses: actions/download-artifact@v4
+      with:
+        name: cowsay-artifact
+        path: dragon.txt
+
     - name: Read files
       run: |
           cat dragon.txt
