--- a/.github/workflows/example_action.yaml
+++ b/.github/workflows/example_action.yaml
@@ -10,7 +10,7 @@ jobs:
           uses: actions/checkout@v4
 
         - name: Welcome message
-          run: echo "my first github action job"
+          run: echo "my first github action job1"
 
         - name: List files
           run: ls
