--- a/.github/workflows/cowsay_shell_workflow.yaml
+++ b/.github/workflows/cowsay_shell_workflow.yaml
@@ -9,7 +9,7 @@ jobs:
     - name: Checkout Repo
       uses: actions/checkout@v4
 
-    - name: List the files
+    - name: List files
       run: ls -ltra
 
     # - name: Change script permission 
