--- a/.github/workflows/enviornment_variables.yaml
+++ b/.github/workflows/enviornment_variables.yaml
@@ -6,8 +6,8 @@ on: workflow_dispatch
 #   WORKF_VAR: workf-var
 jobs:
   job1:
-    # env:
-    #   JOB1_VAR: job1-var
+    env:
+      JOB1_VAR: job1-var
     runs-on: ubuntu-latest
     steps:
     - name: Step1 Variables
@@ -18,10 +18,10 @@ jobs:
     - name: Step2 Variables
       env:
         STEP2_VAR: step2-var
-      run: echo {{env.STEP2_VAR}}
+      run: echo ${{ env.STEP2_VAR }}
 
-    # - name: Job Variables
-    #   run: echo {{ env.JOB1_VAR }}
+    - name: Job Variables
+      run: echo ${{ env.JOB1_VAR }}
 
     # - name: Workflow variables in Job1
     #   run: echo {{ env.WORKF_VAR }} in job1
