--- a/.github/workflows/enviornment_variables.yaml
+++ b/.github/workflows/enviornment_variables.yaml
@@ -1,7 +1,7 @@
 name: Exploring enviornment variable
 
 env:
-    WORKF_VAR: workf-var
+  WORKF_VAR: workf-var
 
 on: workflow_dispatch
 
@@ -27,8 +27,9 @@ jobs:
     - name: Workflow variables in Job1
       run: echo ${{ env.WORKF_VAR }} in job1 is ${{ env.WORKF_VAR }}
       
-#   job2:
-#     runs-on: ubuntu-latest
-#     steps:
-#     - name: Workflow variables in Job2
-#       uses: echo ${{ env.WORKF_VAR }} in job2
+  job2:
+    runs-on: ubuntu-latest
+    needs: job1
+    steps:
+    - name: Workflow variables in Job2
+      uses: echo $WORKF_VAR in job2
