--- a/.github/workflows/enviornment_variables.yaml
+++ b/.github/workflows/enviornment_variables.yaml
@@ -33,9 +33,15 @@ jobs:
   job2:
     runs-on: ubuntu-latest
     needs: job1
+    concurrency:
+      group: prod-deployment 
+      cancel-in-progress: true
     steps:
     - name: Workflow variables in Job2
       run: echo ${{ env.WORKF_VAR }} in job2 is ${{env.WORKF_VAR}}
 
     - name: Repository Variable
       run: echo Repository variable is ${{ vars.REPO_VAR }}
+
+    - name: Sleep for 5 min
+      run: sleep 300s
