--- a/.github/workflows/matrix_configuration.yaml
+++ b/.github/workflows/matrix_configuration.yaml
@@ -1,24 +1,31 @@
 name: Matrix Configuration Workflow
 
 on:
-  push:
+#  push:
   workflow_dispatch:
 
 jobs:
-  deploy-on-ubuntu:
-    runs-on: ubuntu-latest
+  deploy:
+    strategy:
+      matrix:
+        os: [ubuntu-latest, ubuntu-20.04, windows-latest]
+        images: [hello-world, alpine]
+#  deploy-on-ubuntu:
+    runs-on: ${{ matrix.os}}
     steps:
     - name: Echo Docker Detaails
       run: docker info
-    - name: Run Image
-      run: docker run hello-world
+    - name: Run Image ${{ matrix.images }}
+      run: docker run ${{ matrix.images }}
 
-  deploy-on-window:
-    runs-on: windows-latest
-    needs: deploy-on-ubuntu
-    steps:
-    - name: Echo Docker Detaails
-      run: docker info
-    - name: Run Image
-      run: docker run hello-world      
+  ## Below Jobs will be taken care by matrix strategy as coded above
+
+  # deploy-on-window:
+  #   runs-on: windows-latest
+  #   needs: deploy-on-ubuntu
+  #   steps:
+  #   - name: Echo Docker Detaails
+  #     run: docker info
+  #   - name: Run Image
+  #     run: docker run hello-world      
 
