--- a/.github/workflows/matrix_configuration.yaml
+++ b/.github/workflows/matrix_configuration.yaml
@@ -10,6 +10,9 @@ jobs:
       matrix:
         os: [ubuntu-latest, ubuntu-20.04, windows-latest]
         images: [hello-world, alpine]
+        exclude:
+          - images: alpine
+            os: windows-latest
 #  deploy-on-ubuntu:
     runs-on: ${{ matrix.os}}
     steps:
