--- a/.github/workflows/matrix_configuration.yaml
+++ b/.github/workflows/matrix_configuration.yaml
@@ -13,6 +13,9 @@ jobs:
         exclude:
           - images: alpine
             os: windows-latest
+        include:
+          - images: amd64/alpine
+            os: ubuntu-latest
 #  deploy-on-ubuntu:
     runs-on: ${{ matrix.os}}
     steps:
